test/parser/error/err_07_const_dup.pl0
program p; 
const x := 1, x := 2; 
begin 
end